# Mini-Message-Board-Axum

./: Cargo.toml  README.md
src/: handlers.rs  main.rs  templates.rs
templates/: base.html  hello.html  new.html
