[package]
name = "mini-message-board-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {  version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = {version = "0.6.20", features = ["macros"]}
chrono = "0.4.31"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
